<resources>
    <string name="app_name">LocMess</string>

    <!-- Strings related to addprofile -->
    <string name="prompt_delete_key">Do you want to delete </string>
    <string name="prompt_logout_action">Do you really want to logout? </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register_button">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">LocMess</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_connect_mule">Connect as Mule</string>
    <string name="title_activity_add_message">Add Message</string>
    <string name="add_message_message_text">Message</string>

    <string name="undo_string">Undo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_message_start_time_text">Start Time</string>
    <string name="add_message_end_time_text">End Time</string>
    <string name="optional_text">Optional</string>
    <string name="key_text">Key</string>
    <string name="button_next">Next</string>
    <string name="white_list_text">White</string>
    <string name="black_list_text">Black</string>
    <string name="profile_key_text">Key</string>
    <string name="profile_value_text">Value</string>
    <string name="button_finish">Finish</string>
    <string name="add_text">Add</string>


    <!-- Strings related to add location -->
    <string name="add_location_name_text">Your location name</string>
    <string name="add_location_text">Add</string>
    <string name="add_location_radius_text">Choose a radius (in meters)</string>
    <string name="add_location_created">Location sucessfully created</string>
    <string name="add_location_error">Error creating location</string>

    <!-- Strings related to fragments -->
    <string name="fragment_my_messages_title">Your Messages</string>
    <string name="fragment_list_messages_title">Messages Near You</string>
    <string name="fragment_profile_title">Your Profile Key Pairs</string>
    <string name="fragment_list_locations_title">Locations Near You</string>
    <string name="title_activity_add_key_pair">Add Key Pair</string>
    <string name="message_location_activity_centralized">Centralized</string>
    <string name="message_location_activity_decentralized">Decentralized</string>
    <string name="message_view_publisher_title">Publisher :</string>
    <string name="message_view_content_title">Content :</string>
    <string name="refresh_text">Refresh</string>


    <string name="message_removed">Message removed</string>
    <string name="location_removed">Location removed</string>
    <string name="profile_removed">Profile removed</string>

</resources>
