<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_message_policy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmu.tg14.locmessclient.MessagePolicyActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/message_profile_key"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/profile_key_text"
        app:layout_constraintRight_toLeftOf="@+id/message_profile_value"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="18dp"
        android:imeOptions="actionDone"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:layout_width="186dp"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/message_profile_value"
        android:hint="@string/profile_value_text"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/message_profile_key"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/message_profile_key"
        android:imeOptions="actionDone" />

    <Button
        android:text="@string/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_profile_button_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintRight_toRightOf="@+id/message_profiles_list"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/message_profiles_list"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:text="@string/white_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_profile_toggle_white"
        tools:layout_editor_absoluteY="84dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/message_profile_value" />

    <TextView
        android:text="@string/black_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_profile_toggle_black"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/message_profile_value"
        app:layout_constraintRight_toLeftOf="@+id/message_profile_toggle_white"
        android:layout_marginRight="7dp" />

    <Button
        android:text="@string/add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_profile_button_add"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/message_profile_key"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/message_profile_key" />

    <ListView
        android:id="@+id/message_profiles_list"
        android:layout_width="347dp"
        android:layout_height="300dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/message_profile_value"
        app:layout_constraintTop_toBottomOf="@+id/message_profile_button_add"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
