<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmu.tg14.locmessclient.AddMessage">

    <EditText
        android:layout_width="352dp"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/add_message_content"
        android:hint="@string/add_message_message_text"
        app:layout_constraintRight_toLeftOf="@+id/textView4"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="144dp"
        android:layout_height="45dp"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/add_message_start_time"
        android:editable="false"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/add_message_end_time"
        android:hint="@string/optional_text"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/add_message_start_time"
        android:layout_marginLeft="24dp"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="126dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="9dp"
        android:text="@string/add_message_start_time_text" />

    <TextView
        android:text="@string/add_message_end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_message_content"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/add_message_end_time"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>
