<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.cmu.tg14.locmessclient.AddProfileKey"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/add_profile_key"
        android:hint="@string/profile_key_text"
        app:layout_constraintRight_toLeftOf="@+id/add_profile_value"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/add_profile_value"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_profile_value"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:imeOptions="actionDone" />

    <EditText
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/add_profile_value"
        android:hint="@string/profile_value_text"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/add_profile_button_add"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="28dp"
        android:imeOptions="actionDone" />

    <Button
        android:text="@string/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_profile_button_finish"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:text="@string/add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_profile_button_add"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/add_profile_value"
        android:layout_marginTop="73dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/add_profile_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="79dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_profile_button_add"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />


</android.support.constraint.ConstraintLayout>
