<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_message_policy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmu.tg14.locmessclient.MessagePolicyActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/message_profile_key"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/profile_key_text"
        app:layout_constraintRight_toLeftOf="@+id/message_profile_value"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="18dp"
        android:imeOptions="actionDone"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/message_profile_value"
        android:hint="@string/profile_value_text"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/message_profile_key"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/message_profile_key"
        android:imeOptions="actionDone"
        android:layout_marginRight="5dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:text="@string/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_profile_button_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:text="@string/add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_profile_button_add"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/message_profile_key"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/message_profile_key" />

    <ListView
        android:id="@+id/message_profile_white_list"
        android:layout_width="320dp"
        android:layout_height="290dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/message_profile_button_finish"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_profile_button_add"
        app:layout_constraintVertical_bias="0.615"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:text="White"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="17dp"
        android:text="Black"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintLeft_toRightOf="@+id/message_profile_button_add"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/message_profile_button_add" />

</android.support.constraint.ConstraintLayout>
